--- a/imgui.ini
+++ b/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][self.active examples]
-Pos=281,24
+Pos=693,104
 Size=179,353
 Collapsed=0
 
 [Window][Hello, Imgui!]
 Pos=117,579
-Size=107,48
+Size=368,156
 Collapsed=0
 
 [Window][Example: child region]
@@ -24,8 +24,8 @@ Size=136,54
 Collapsed=0
 
 [Window][select-popup-modal]
-Pos=382,398
-Size=135,103
+Pos=386,398
+Size=348,205
 Collapsed=0
 
 [Window][Example: table]
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][Example: popup context view]
 Pos=60,60
-Size=191,48
+Size=130,102
 Collapsed=0
 
 [Window][Debug]
@@ -59,8 +59,8 @@ Size=74,65
 Collapsed=0
 
 [Window][Example: simple popup]
-Pos=60,60
-Size=98,64
+Pos=576,378
+Size=275,307
 Collapsed=0
 
 [Window][Example: item groups]
@@ -71,5 +71,15 @@ Collapsed=0
 [Window][Example Tab Bar]
 Pos=60,60
 Size=485,458
+Collapsed=0
+
+[Window][Example: popup context window]
+Pos=63,248
+Size=305,218
+Collapsed=0
+
+[Window][Save?]
+Pos=306,407
+Size=287,84
 Collapsed=0
 
